# ai-gupiao

./: .env.example  .gitignore  CLAUDE.md  README.md  requirements.txt  web.py
.claude/: settings.local.json
.codex/skills/social-media/: SKILL.md
_alphasift/: pyproject.toml
_alphasift/alphasift/: __init__.py  audit.py  candidate_context.py  cli.py  config.py  context.py  daily.py  dsa.py  evaluate.py  filter.py  industry.py  models.py  pipeline.py  post_analysis.py  ranker.py  risk.py  scorer.py  snapshot.py  store.py  strategy.py
_alphasift/alphasift/strategies/: README.md  balanced_alpha.yaml  capital_heat.yaml  dual_low.yaml  long_term.yaml  mid_term.yaml  oversold_reversal.yaml  quality_value.yaml  short_term.yaml  shrink_pullback.yaml  volume_breakout.yaml
config/: __init__.py  settings.py
data/: stock.db-shm  stock.db-wal
scripts/: run_pipeline.py
src/ai/: __init__.py  base_predictor.py  evaluation.py  features.py  sklearn_predictor.py
src/analysis/: __init__.py  analyzer.py
src/analysis/indicators/: __init__.py  base.py  ma.py  (+3 more)
src/core/: exceptions.py
src/data/: akshare_fetcher.py  base_fetcher.py  base_storage.py  sqlite_storage.py
src/pipeline/: orchestrator.py
src/utils/: __init__.py  helpers.py  logger.py
static/: app.js  style.css
templates/: index.html
tests/: conftest.py
tests/test_ai/: __init__.py  test_features.py  test_sklearn_predictor.py
tests/test_analysis/: __init__.py  test_analyzer.py
tests/test_core/: __init__.py  test_models.py
tests/test_data/: __init__.py  test_akshare_fetcher.py  test_sqlite_storage.py
(+4 files in other folders)
