[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alphasift"
version = "0.2.0"
description = "A-share stock screening engine"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "pyyaml>=6.0",
    "litellm>=1.0",
    "efinance>=0.4",
    "akshare>=1.10",
    "requests>=2.28",
]

[project.scripts]
alphasift = "alphasift.cli:main"

[tool.setuptools.packages.find]
include = ["alphasift*"]

[tool.setuptools.package-data]
alphasift = ["strategies/*.yaml"]
